--- a/shopping.html
+++ b/shopping.html
@@ -9,8 +9,8 @@
 <h3>Electronics Items</h3>
 <h3>Gift Items</h3>
 <h3>Fashion</h3>
-
+<h3>Fashion sale</h3>
 <p> This items are showing a small purchasing items in online shopping </p>
-
+<h3>ongoing</h3>
 </body>
 </html>
