--- a/shopping.html
+++ b/shopping.html
@@ -11,6 +11,6 @@
 <h3>Fashion</h3>
 
 <p> This items are showing a small purchasing items in online shopping </p>
-
+<h1>for new conflict</h1>
 </body>
 </html>
